objects/ACP_Relationship__c.object
<CustomObject>
    <description>Anushka 04/24/17 - Created for Account Plan</description>
    <fields>
        <fullName>ACP_Account_ID__c</fullName>
        <formula>ACP_Account_Plan__r.ACP_Account_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID`</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Comments__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <inlineHelpText>Editable</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Current_NPS_Status_f__c</fullName>
        <description>Alka 05/12/17 - Created for Account Plan</description>
        <formula>ACP_Name__r.NPS_Status__c</formula>
        <label>Current NPS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Current_NPS_f__c</fullName>
        <description>Alka 05/12/17 - Created for Account Plan</description>
        <formula>ACP_Name__r.NPS_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Location_Formula__c</fullName>
        <formula>ACP_Name__r.MailingState + &quot; &quot; +  ACP_Name__r.MailingCountry</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Location__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Name__c</fullName>
        <description>Anushka 04/24/17 - created for Account Plan</description>
        <label>Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Previous_NPS_f__c</fullName>
        <description>Alka 05/12/17 - Created for Account Plan</description>
        <formula>ACP_Name__r.NPS_Previous_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Role__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <formula>TEXT(ACP_Name__r.Role__c )</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Title__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <formula>ACP_Name__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>